--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: ETH Sao Paulo
 
 # Short description of your site
-description: ETHSaoPaulo Hackathon & Workshops
+description: ETHSaoPaulo :: ETHEREUM Hackathon & Workshops
 
 # --- Navigation bar options --- #
 
@@ -64,7 +64,7 @@ footer-link-col: "#404040"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: ETH Sao Paulo
+  name: 
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
