--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: ETH Sao Paulo
 
 # Short description of your site
-description: ETHSaoPaulo :: ETHEREUM Hackathon & Workshops
+description: ETHSaoPaulo - ETHEREUM Hackathon & Workshops
 
 # --- Navigation bar options --- #
 
