--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,7 @@ social-network-links:
   #facebook: daattali
   #github: daattali
   twitter: ETHSaoPaulo
+  meetup: ETHSaoPaulo
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
@@ -145,7 +146,7 @@ title-separator: "-"
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "america/sao_paulo"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
